# fmp-py-client

./: CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: exceptions.md  index.md  types.md
docs/api/: bulk.md  calendar.md  company.md  crowdfunding.md  economics.md  esg.md  etf.md  financials.md  government.md  historical.md  insider.md  market.md  mergers.md  metrics.md  movers.md  news.md  overview.md  quotes.md  search.md  sec.md  sector.md  technical.md  valuation.md
docs/examples/: basic.md  financial-analysis.md  portfolio.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
src/fmp_client/: __init__.py  _base.py  _client.py  _types.py
src/fmp_client/api/: _bulk.py  _calendar.py  _company.py  _crowdfunding.py  _economics.py  _esg.py  _etf.py  _financials.py  _government.py  _historical.py  _insider.py  _market.py  _mergers.py  _metrics.py  _movers.py  _news.py  _quotes.py  _search.py  _sec.py  _sector.py  _technical.py  _valuation.py
src/fmp_py_client/api/: _bulk.py  _calendar.py  _company.py  _crowdfunding.py  _economics.py  _esg.py  _etf.py  _financials.py  _government.py  _historical.py  _insider.py  _market.py  _mergers.py  _metrics.py  _movers.py  _news.py  _quotes.py  _search.py  _sec.py  _sector.py  _technical.py  _valuation.py
src/fmp_py_client/models/: __init__.py  calendar.py  company.py  crowdfunding.py  (+18 more)
src/pyfmp/: __init__.py
tests/: conftest.py  test_api_additional.py  test_api_mixins.py  test_api_remaining.py  test_base.py  test_client.py  test_exceptions.py  test_types.py
