[project]
name = "fmp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chengxu Bian", email = "cbian564@gmail.com" }
]
requires-python = ">=3.12"
dependencies = ["httpx>=0.27"]

[dependency-groups]
dev = ["ruff>=0.11", "ty>=0.0.1a7"]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
