[project]
name = "fmp-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chengxu Bian", email = "cbian564@gmail.com" }
]
requires-python = ">=3.12"
dependencies = ["httpx>=0.27"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.11",
    "ty>=0.0.1a7",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
